--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
-
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Mis Proyectos - Programación Web</title>
+</head>
+<body>
   <h1>Listado de Proyectos</h1>
   <ul>
     <li><a href="/ArrayObjetos/" target="_blank">ArrayObjetos</a></li>
@@ -20,3 +27,5 @@
     <li><a href="/paginabeta/" target="_blank">Página Beta</a></li>
     <li><a href="/vistaPreliminar/" target="_blank">Vista Preliminar</a></li>
   </ul>
+</body>
+</html>
